# Cpp_learning

./: .gitignore  CMakeLists.txt  README.md
include/cmake_training/: my_class.h
src/: my_class.cpp  my_main.cpp
